# tast

./: DOCUMENTACION_DISTRIBUCION.md  INFORME_AUDITORIA.md  INSTALACION_WINDOWS.md  PROJECT_STATUS.md  README.md  electron-main.cjs  electron-preload.js  index.html  metadata.json  package-lock.json  package.json  server.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdminPanel.tsx  AiConsultingTab.tsx  AuditTab.tsx  BackupsTab.tsx  CashRegisterModal.tsx  CrmTab.tsx  InventoryTab.tsx  KioskDashboard.tsx  LoginModal.tsx  ManualKeypadModal.tsx  MobileWaiter.tsx  PromosTab.tsx  ReservationsTab.tsx  WaitersTab.tsx
src/lib/: api.ts  offlineSync.ts
