[package]
name = "el_tast_tpv"
version = "1.0.0"
description = "TPV Tactil Profesional - El Tast"
authors = ["El Tast S.L. <soporte@eltast.com>"]
license = "Apache-2.0"
repository = ""
default-run = "el_tast_tpv"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }

[profile.release]
panic = "abort" # Reduce binary size
codegen-units = 1 # Optimize for performance and size
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size
